--- a/.github/workflows/update.blog.resume.yml
+++ b/.github/workflows/update.blog.resume.yml
@@ -38,13 +38,10 @@ jobs:
       run: |
         cp public/resume.json Docusaurus-Blog/data/
 
-    - name: Commit changes
+    - name: Commit & push changes
       run: |
         cd Docusaurus-Blog
         git add data/resume.json
         git commit -m "Reactsume updates resume.json"
-
-    - name: Push changes
-      run: |
         git remote add external git@github.com:brunopc-net/Docusaurus-Blog.git
         git push origin gh-pages
