--- a/.github/workflows/update.blog.resume.yml
+++ b/.github/workflows/update.blog.resume.yml
@@ -12,36 +12,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout brunopc branch
-      uses: actions/checkout@v3
-      with:
-        ref: brunopc
+      - name: Checkout brunopc branch
+        uses: actions/checkout@v4
+        with:
+          ref: brunopc
 
-    - name: Clone Docusaurus-Blog repository
-      uses: actions/checkout@v3
-      with:
-        repository: brunopc-net/Docusaurus-Blog
-        ref: master
-        path: Docusaurus-Blog
+      - name: Validate resume json syntax
+        uses: GrantBirki/json-yaml-validate@v3.0.0
+        with:
+          files: |
+            public/resume.json
+      - run: echo "resume.json syntax is valid 🎉"
 
-    - name: Set SSH deploy key
-      uses: webfactory/ssh-agent@v0.9.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_DEPLOY_KEY }}
+      - name: Clone Docusaurus-Blog repository
+        uses: actions/checkout@v3
+        with:
+          repository: brunopc-net/Docusaurus-Blog
+          ref: master
+          path: Docusaurus-Blog
 
-    - name: Set up Git user
-      run: |
-        git config --global user.email 'work@brunopc.net'
-        git config --global user.name 'Bruno PC'
+      - name: Set SSH deploy key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_DEPLOY_KEY }}
 
-    - name: Update resume.json file
-      run: |
-        cp public/resume.json Docusaurus-Blog/static/data/
+      - name: Set up Git user
+        run: |
+          git config --global user.email 'work@brunopc.net'
+          git config --global user.name 'Bruno PC'
 
-    - name: Commit & push changes
-      run: |
-        cd Docusaurus-Blog
-        git add static/data/resume.json
-        git commit -m "Reactsume updates resume.json"
-        git remote add external git@github.com:brunopc-net/Docusaurus-Blog.git
-        git push origin master
+      - name: Update resume.json file
+        run: |
+          cp public/resume.json Docusaurus-Blog/static/data/
+
+      - name: Commit & push changes
+        run: |
+          cd Docusaurus-Blog
+          git add static/data/resume.json
+          git commit -m "Reactsume updates resume.json"
+          git remote add external git@github.com:brunopc-net/Docusaurus-Blog.git
+          git push origin master
